// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
<div>
  <div
    class="sc-gswNZR uUAJC sc-ZqGJI jSVGjb"
  >
    <div
      class="sc-bcXHqe evAMOC"
    >
      <div
        class="sc-jSUZER kEfUQE"
      >
        <div
          class="sc-dkKxlM isXeIg"
        >
          <h2
            class="sc-gJFNMl cVlSUY sc-iBYQkv lfpFWy"
            data-testid="heading"
          >
            <span
              class="sc-gKPRtg lhzWfH"
              data-testid="stripe"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h2>
          <p
            class="sc-fxTzYC HSEkf"
          >
            <button
              class="sc-hhOBVt gQDoEE sc-iWOQzb bcMcTx"
            >
              Non
            </button>
            <button
              class="sc-hhOBVt gQDoEE sc-iWOQzb bcMcTx"
            >
              Oui
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
<div>
  <div
    class="sc-gswNZR uUAJC sc-ZqGJI jSVGjb"
  >
    <div
      class="sc-bcXHqe evAMOC"
    >
      <div
        class="sc-jSUZER kEfUQE"
      >
        <div
          class="sc-dkKxlM isXeIg"
        >
          <h2
            class="sc-gJFNMl cVlSUY sc-iBYQkv lfpFWy"
            data-testid="heading"
          >
            <span
              class="sc-gKPRtg lhzWfH"
              data-testid="stripe"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <fieldset
            class="sc-knEsKG dXWofg"
          >
            <legend
              class="sc-cxdZMj bIsGyX"
            >
              Pouvez-vous nous en dire plus ?
            </legend>
            <label
              class="sc-xWrgk kmmFzB"
              for="unclear"
            >
              <input
                class="sc-dWRHGJ IwgBI"
                id="unclear"
                name="category"
                type="checkbox"
                value="unclear"
              />
              Les informations ne sont pas claires.
            </label>
            <label
              class="sc-xWrgk kmmFzB"
              for="unrelated"
            >
              <input
                class="sc-dWRHGJ IwgBI"
                id="unrelated"
                name="category"
                type="checkbox"
                value="unrelated"
              />
              Cette page ne correspond pas à ma recherche ou à ma situation.
            </label>
            <label
              class="sc-xWrgk kmmFzB"
              for="unsatisfied"
            >
              <input
                class="sc-dWRHGJ IwgBI"
                id="unsatisfied"
                name="category"
                type="checkbox"
                value="unsatisfied"
              />
              Je ne suis pas satisfait de cette réglementation.
            </label>
            <label
              class="sc-xWrgk kmmFzB"
              for="wrong"
            >
              <input
                class="sc-dWRHGJ IwgBI"
                id="wrong"
                name="category"
                type="checkbox"
                value="wrong"
              />
              Les informations me semblent fausses.
            </label>
          </fieldset>
          <label
            class="sc-uokDu dACRrx"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gkSfol iwPgQL sc-bTUVah dQxIJs"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-bCfvAP eYA-DYW"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-gYbzsP fCavdH"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-dTjBdT jOYlIr"
          >
            <button
              class="sc-hhOBVt foDcLd sc-iWOQzb bcMcTx"
            >
              Envoyer
            </button>
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre
           
          <button
            class="sc-hhOBVt ipLPsD"
            type="button"
          >
            les services du ministère du Travail en région
            <svg
              aria-hidden="true"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
<div>
  <div
    class="sc-gswNZR uUAJC sc-ZqGJI jSVGjb"
  >
    <div
      class="sc-bcXHqe evAMOC"
    >
      <div
        class="sc-jSUZER kEfUQE"
      >
        <div
          class="sc-dkKxlM isXeIg"
        >
          <h2
            class="sc-gJFNMl cVlSUY sc-iBYQkv lfpFWy"
            data-testid="heading"
          >
            <span
              class="sc-gKPRtg lhzWfH"
              data-testid="stripe"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <label
            class="sc-uokDu dACRrx"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gkSfol iwPgQL sc-bTUVah dQxIJs"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-bCfvAP eYA-DYW"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-gYbzsP fCavdH"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-dTjBdT jOYlIr"
          >
            <button
              class="sc-hhOBVt foDcLd sc-iWOQzb bcMcTx"
            >
              Envoyer
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send matomo event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send matomo event when click yes 1`] = `"[]"`;
